@@ -1,6 +1,6 @@
 package com.capg.service.impl;
 
-import com.capg.dto.PostDto;
+import com.capg.dto.PostDTO;
 import com.capg.entity.Friends;
 import com.capg.entity.Post;
 import com.capg.entity.User;
@@ -10,25 +10,46 @@ import com.capg.repository.IFriendsRepository;
 import com.capg.repository.PostRepository;
 import com.capg.service.PostService;
 
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
 import java.util.*;
 import java.util.stream.Collectors;
 
+/**
+ * Service implementation for managing post-related operations.
+ * <p>
+ * Handles business logic such as fetching posts, filtering,
+ * searching, trending logic, and user feed generation.
+ * </p>
+ */
 @Service
 public class PostServiceImpl implements PostService {
 
-    @Autowired
     private PostRepository postRepository;
 
     @Autowired
     private IFriendsRepository friendsRepo;
 
-    //DTO Mapper
-    private PostDto mapToDTO(Post post) {
-        PostDto dto = new PostDto();
+    /**
+     * Constructor-based dependency injection.
+     *
+     * @param postRepository repository for post data
+     * @param friendsRepo    repository for friends relationship
+     */
+    public PostServiceImpl(PostRepository postRepository, IFriendsRepo friendsRepo) {
+        this.postRepository = postRepository;
+        this.friendsRepo = friendsRepo;
+    }
+
+    /**
+     * Converts Post entity to PostDto.
+     *
+     * @param post the Post entity
+     * @return mapped PostDto object
+     */
+    private PostDTO mapToDTO(Post post) {
+        final PostDTO dto = new PostDTO();
 
         dto.setPostID(post.getPostID());
         dto.setContent(post.getContent());
@@ -43,15 +64,22 @@ public class PostServiceImpl implements PostService {
         return dto;
     }
 
-    //Fetch posts by a User
+    /**
+     * Fetches posts created by a specific user.
+     *
+     * @param userId the user ID
+     * @return list of PostDto
+     * @throws BadRequestException    if userId is null
+     * @throws PostNotFoundException  if no posts are found
+     */
     @Override
-    public List<PostDto> getPostsByUser(Integer userId) {
+    public List<PostDTO> getPostsByUser(Integer userId) {
 
         if (userId == null) {
             throw new BadRequestException("User ID cannot be null");
         }
 
-        List<Post> posts = postRepository.findByUserUserID(userId);
+        final List<Post> posts = postRepository.findByUserUserID(userId);
 
         if (posts.isEmpty()) {
             throw new PostNotFoundException("No posts found for user: " + userId);
@@ -60,15 +88,23 @@ public class PostServiceImpl implements PostService {
         return posts.stream().map(this::mapToDTO).collect(Collectors.toList());
     }
 
-    //Fetch Posts by Date Range
+    /**
+     * Fetches posts within a specified date range.
+     *
+     * @param start start date-time
+     * @param end   end date-time
+     * @return list of PostDto
+     * @throws BadRequestException    if inputs are null
+     * @throws PostNotFoundException  if no posts exist in range
+     */
     @Override
-    public List<PostDto> getPostsByDateRange(LocalDateTime start, LocalDateTime end) {
+    public List<PostDTO> getPostsByDateRange(LocalDateTime start, LocalDateTime end) {
 
         if (start == null || end == null) {
             throw new BadRequestException("Date range cannot be null");
         }
 
-        List<Post> posts = postRepository.findByTimestampBetween(start, end);
+        final List<Post> posts = postRepository.findByTimestampBetween(start, end);
 
         if (posts.isEmpty()) {
             throw new PostNotFoundException("No posts found in given date range");
@@ -77,17 +113,22 @@ public class PostServiceImpl implements PostService {
         return posts.stream().map(this::mapToDTO).collect(Collectors.toList());
     }
 
-    //Search posts by Keyword
+    /**
+     * Searches posts based on a keyword.
+     *
+     * @param keyword the search keyword
+     * @return list of PostDto
+     * @throws BadRequestException    if keyword is null/blank
+     * @throws PostNotFoundException  if no matching posts found
+     */
     @Override
-    public List<PostDto> searchPosts(String keyword) {
+    public List<PostDTO> searchPosts(String keyword) {
 
-        //Validation
-        if (keyword == null || keyword.trim().isEmpty()) {
+        if (keyword == null || keyword.isBlank()) {
             throw new BadRequestException("Keyword cannot be empty");
         }
 
-        //Direct DTO fetch (no entity loading)
-        List<PostDto> posts = postRepository.searchPostsByKeyword(keyword);
+        final List<PostDTO> posts = postRepository.searchPostsByKeyword(keyword);
 
         if (posts.isEmpty()) {
             throw new PostNotFoundException("No posts found with keyword: " + keyword);
@@ -96,11 +137,19 @@ public class PostServiceImpl implements PostService {
         return posts;
     }
 
-    //Fetch Trending Posts
+    /**
+     * Retrieves top trending posts.
+     * <p>
+     * Currently sorts posts by latest timestamp and limits to top 10.
+     * </p>
+     *
+     * @return list of trending PostDto
+     * @throws PostNotFoundException if no posts exist
+     */
     @Override
-    public List<PostDto> getTrendingPosts() {
+    public List<PostDTO> getTrendingPosts() {
 
-        List<Post> posts = postRepository.findAll();
+        final List<Post> posts = postRepository.findAll();
 
         if (posts.isEmpty()) {
             throw new PostNotFoundException("No posts available");
@@ -113,22 +162,37 @@ public class PostServiceImpl implements PostService {
                 .collect(Collectors.toList());
     }
 
-    //Fetch feed of a user
+    /**
+     * Generates a personalized feed for a user.
+     * <p>
+     * Includes posts from:
+     * <ul>
+     *     <li>The user</li>
+     *     <li>The user's friends</li>
+     * </ul>
+     * Sorted by latest posts.
+     * </p>
+     *
+     * @param userId the user ID
+     * @return list of PostDto representing the feed
+     * @throws BadRequestException    if userId is null
+     * @throws PostNotFoundException  if no feed posts found
+     */
     @Override
-    public List<PostDto> getFeed(Integer userId) {
+    public List<PostDTO> getFeed(Integer userId) {
 
         if (userId == null) {
             throw new BadRequestException("User ID cannot be null");
         }
 
-        User user = new User();
+        final User user = new User();
         user.setUserID(userId);
 
-        List<Friends> friends = friendsRepo.findByUser1OrUser2(user, user);
+        final List<Friends> friends = friendsRepo.findByUser1OrUser2(user, user);
 
-        Set<Integer> friendIds = new HashSet<>();
+        final Set<Integer> friendIds = new HashSet<>();
 
-        for (Friends f : friends) {
+        for (final Friends f : friends) {
             if (f.getUser1().getUserID().equals(userId)) {
                 friendIds.add(f.getUser2().getUserID());
             } else {
@@ -138,9 +202,9 @@ public class PostServiceImpl implements PostService {
 
         friendIds.add(userId);
 
-        List<Post> posts = postRepository.findAll();
+        final List<Post> posts = postRepository.findAll();
 
-        List<Post> feedPosts = posts.stream()
+        final List<Post> feedPosts = posts.stream()
                 .filter(p -> friendIds.contains(p.getUser().getUserID()))
                 .sorted((a, b) -> b.getTimestamp().compareTo(a.getTimestamp()))
                 .collect(Collectors.toList());
